# baseline_vit

./: README.md  cpsmi2025_test_list.pkl  cpsmi2025_train_list.pkl  intel4_test_list.pkl  intel4_train_list.pkl  pyproject.toml  requirements.txt  train_swin_tiny.py
